# otel-extensions-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci-tests.yml
example/: example.py
otel_extensions/: __init__.py
tests/: conftest.py  example.py  pytest.ini  test_custom_exporter.py  test_decorator.py  test_telemetry_options.py  test_tracecontextcarrier.py  test_traceeventloghandler.py
